[package]
name = "boj-cli"
version = "0.1.0"
edition = "2018"
authors = ["kiwiyou <kiwiyou.dev@gmail.com>"]

[[bin]]
name = "boj"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
clap = "3.0.0-beta.2"
eyre = "0.6.5"
log = "0.4.14"
muroba = { git = "https://github.com/kiwiyou/muroba" }
pretty_env_logger = "0.4.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.66"
tempfile = "3.2.0"
tera = "1.12.1"
thirtyfour = "0.26.0"
tokio = "1.9.0"
ureq = { version = "2.1.1", features = ["json"] }
